--- a/projects/sparkle-ui/styles/core/core/layout.scss
+++ b/projects/sparkle-ui/styles/core/core/layout.scss
@@ -24,29 +24,30 @@ body {
   }
 }
 
-*::-webkit-scrollbar {
-  width: 8px;
-  height: 12px;
-  background: transparent;
-}
+// *::-webkit-scrollbar {
+//   width: 8px;
+//   height: 12px;
+//   background: transparent;
+//   scrollbar-width: thin;
+// }
 
-*::-webkit-scrollbar-track {
-  background: transparent;
-}
+// *::-webkit-scrollbar-track {
+//   background: transparent;
+// }
 
-*::-webkit-scrollbar-thumb {
-  background: #acacac;
-  background: light-dark(#acacac, #4f4f4f);
-  border-radius: 50px;
-  border: 3px solid transparent;
-  border-left-width: 1px;
-  border-right-width: 2px;
-  background-clip: content-box;
-}
+// *::-webkit-scrollbar-thumb {
+//   background: #acacac;
+//   background: light-dark(#acacac, #4f4f4f);
+//   border-radius: 50px;
+//   border: 3px solid transparent;
+//   border-left-width: 1px;
+//   border-right-width: 2px;
+//   background-clip: content-box;
+// }
 
-*::-webkit-scrollbar-thumb:hover {
-  background-color: #888888;
-}
+// *::-webkit-scrollbar-thumb:hover {
+//   background-color: #888888;
+// }
 
 .spacer {
   flex: 1 0;
